# m4tv2

./: .gitignore  Dockerfile  Dockerfile.build  README.md  app.py  docker-compose.yml  download-models.sh  download.sh  pyproject.toml  requirements.txt
agent/: .env  m4t_translate.py  requirements.txt
m4t_translate/: .env  m4t_translate.py  requirements.txt
