[project]
name = "m4tv2"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodin",email = "brendenaudrina6287@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
